# daily-task

./: .gitignore  README.md  index.html  package-lock.json  package.json  启动每日任务.bat
legacy/: build.bat  daily_tasks.py  requirements.txt  关闭开机自启.bat  启动任务清单.bat  安装依赖.bat  开启开机自启.bat
scripts/: test-alarm.html  verify-macro-dates.mjs
src/: App.tsx  BallDock.tsx  MacroCalendar.tsx  TitleBar.tsx  api.ts  app.css  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-commands.toml
src-tauri/src/: autostart.rs  backup.rs  commands.rs  email.rs  email_config.rs  lib.rs  logger.rs  main.rs  store.rs  time_util.rs  window_layout.rs
src/components/: BallWindow.tsx  PanelWindow.tsx
src/data/: usMacroCalendar.ts
src/utils/: alarm.ts  macroReminders.ts  timezone.ts  windowDrag.ts
